--- a/bmt/pom.xml
+++ b/bmt/pom.xml
@@ -130,9 +130,7 @@
             <artifactId>maven-war-plugin</artifactId>
             <version>${version.war.plugin}</version>
             <configuration>
-               <!-- Java EE 6 doesn't require web.xml, Maven needs to catch
-                  up! -->
-               <failOnMissingWebXml>false</failOnMissingWebXml>
+               <webXML>src/main/webapp/WEB-INF/web.xml</webXML>
             </configuration>
          </plugin>
          <!-- JBoss AS plugin to deploy war -->
